--- a/news-story-template/responsive-strategies/a.html
+++ b/news-story-template/responsive-strategies/a.html
@@ -74,8 +74,9 @@
           </li>
         </ul>
   
-        <!-- Debugging info, you can comment this section out when you don't need it. -->
+        <!-- Debugging info, you can comment this section out when you don't need it.
         <pre>The stories array: {{ stories | json }}</pre>
+        -->
       
       </div>
   
