--- a/news-story-template/responsive-strategies/b.html
+++ b/news-story-template/responsive-strategies/b.html
@@ -75,9 +75,9 @@
           </li>
         </ul>
   
-        <!-- Debugging info, you can comment this section out when you don't need it. -->
+        <!-- Debugging info, you can comment this section out when you don't need it.
         <pre>The stories array: {{ stories | json }}</pre>
-      
+        -->
       </div>
   
       <!-- These scripts load the Vue library, and the actual story content. -->
