--- a/news-story-template/finished template/index.html
+++ b/news-story-template/finished template/index.html
@@ -49,7 +49,7 @@
             <div class="story_source">
               <!-- Story source (linked) -->
               <p class="featured_date">reported by
-              <a class="source" v-bind:href="featuredStory.source.url"> {{ featuredStory.source.name }}</a></p>
+              <a class="featured_source" v-bind:href="featuredStory.source.url"> {{ featuredStory.source.name }}</a></p>
             </div>
           </div>
   
