--- a/control-panel/master-template/index.html
+++ b/control-panel/master-template/index.html
@@ -4,15 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Master-Document</title>
 </head>
 <body>
-
     <!--Header-->
-
+    
     <!--Page grid/ margin-->
 
     <!--form-->
+    <div>
+    <form>
+        <h1>Form Title</h1>
+        <p>This is the instruction for the form</p>
+        <div>
+        <span class="input-group-text" id="basic-addon1">Firstname</span>
+        <input type="text" class="form-control" placeholder="Firstname" aria-describedby="basic-addon1">
+        <span class="input-group-text" id="basic-addon1">Lastname</span>
+        <input type="text" class="form-control" placeholder="Lastname" aria-describedby="basic-addon1">
+        <span class="input-group-text" id="basic-addon1">@</span>
+        <input type="text" class="form-control" placeholder="Usernmae" aria-describedby="basic-addon1">
+        </div>
+
+        <div>
+        <input type="checkbox" class="btn-check" id="btn-check-2-outlined" checked autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btn-check-2-outlined">Checked</label><br>
+
+        <input type="checkbox" class="btn-check" id="btn-check-2-outlined" checked autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btn-check-2-outlined">Checked</label><br>
+
+        <input type="checkbox" class="btn-check" id="btn-check-2-outlined" checked autocomplete="off">
+        <label class="btn btn-outline-secondary" for="btn-check-2-outlined">Checked</label><br>
+        </div>
+    </form>
+    </div>
+    
+
+    <!--Search-->
 
     <!--list-->
 
