--- a/game-ui/concept/index.html
+++ b/game-ui/concept/index.html
@@ -7,7 +7,8 @@
     <title>Game Concept</title>
 </head>
 <body>
-    <img src="Frame 1.jpg" alt="...">
+    <div style="width: 100%">
+        <img src="Frame 1.jpg" alt="...">
     <img src="Frame 2.jpg" alt="...">
     <img src="Untitled_Artwork-1 2.png" alt="...">
     <img src="Untitled_Artwork-2 2.png" alt="...">
@@ -26,5 +27,7 @@
     <img src="Untitled_Artwork-15.png" alt="...">
     <img src="Untitled_Artwork-16.png" alt="...">
     <img src="Untitled_Artwork-17.png" alt="...">
+    </div>
+    
 </body>
 </html>
