--- a/game-ui/concept/index.html
+++ b/game-ui/concept/index.html
@@ -5,29 +5,50 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Game Concept</title>
+    <style>
+        img{
+            width:100%;
+        }
+    </style>
 </head>
 <body>
-    <div style="width: 100%">
-        <img src="Frame 1.jpg" alt="...">
+    <img src="Frame 1.jpg" alt="...">
     <img src="Frame 2.jpg" alt="...">
+    <hr>
     <img src="Untitled_Artwork-1 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-2 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-3 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-4 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-5 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-6 2.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-7.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-8.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-9.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-10.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-11.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-12.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-13.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-14.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-15.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-16.png" alt="...">
+    <hr>
     <img src="Untitled_Artwork-17.png" alt="...">
-    </div>
+    <hr>
     
 </body>
 </html>
