--- a/game-ui/assets/index.html
+++ b/game-ui/assets/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assets</title>
+    <style>
+        div{
+            width:1350px;
+            height:auto;
+        }
+        img{
+            width:100%;
+        }
+    </style>
 </head>
 <body>
-    <img src="background.jpg" alt="background">
+    <div class="container">
+        <img src="background.jpg" alt="background">
     <img src="Full_background_img.jpg" alt="full_background">
     <img src="Clickable_character.png" alt="character">
     <img src="Clickable_item.png" alt="item">
@@ -22,6 +32,8 @@
     <img src="selection_example.jpg" alt="selected example">
     <img src="item_slot.png" alt="item slot">
     <img src="item_slot_close.png" alt="item slot closing button">
+    </div>
+    
 
 
 </body>
