--- a/game-ui/assets/index.html
+++ b/game-ui/assets/index.html
@@ -13,24 +13,55 @@
         img{
             width:100%;
         }
+        .grid{
+            display:grid;
+            grid-template-columns: auto auto;
+            padding:10px;
+        }
+        .grid-item{
+            width:500px;
+        }
+        h1{
+            font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
     </style>
 </head>
 <body>
+    <h1>Background</h1>
     <div class="container">
         <img src="background.jpg" alt="background">
+    <h1>Background with Items</h1>
     <img src="Full_background_img.jpg" alt="full_background">
+    <h1>Clickable Character</h1>
     <img src="Clickable_character.png" alt="character">
+    <h1>Clickable Item</h1>
     <img src="Clickable_item.png" alt="item">
+    <h1>Dialog Box</h1>
     <img src="dialog_box.png" alt="dialog box">
+    <h1>Popup Screen</h1>
     <img src="popup-box.png" alt="pop up box">
-    <img src="button_1.png" alt="button">
-    <img src="button_2.png" alt="button">
-    <img src="button_3.png" alt="button">
-    <img src="button_4.png" alt="button">
-    <img src="background.jpg" alt="background">
+    <h1>Button Options</h1>
+    <div class="grid">
+        <div class="grid-item">
+            <img src="button_1.png" alt="button">
+        </div>
+        <div class="grid-item">
+            <img src="button_2.png" alt="button">
+        </div>
+        <div class="grid-item">
+            <img src="button_3.png" alt="button">
+        </div>
+        <div class="grid-item">
+            <img src="button_4.png" alt="button">
+        </div> 
+    </div>
+    <h1>Button Selection Circle</h1>
     <img src="Selection_circle.png" alt="selection">
+    <h1>Selection Example</h1>
     <img src="selection_example.jpg" alt="selected example">
+    <h1>Item Slot</h1>
     <img src="item_slot.png" alt="item slot">
+    <h1>Item Slot Closing Button</h1>
     <img src="item_slot_close.png" alt="item slot closing button">
     </div>
     
